# tap-mssql

./: .gitignore  README.md  config_template.json  data.json  nekt.config.json  pyproject.toml
output/: catalog.json  data.jsonl
tap_mssql/: __main__.py  connection.py  connector.py  ssh_tunnel.py  tap.py
tap_mssql/streams/: __init__.py  common.py  query.py
