[tool.poetry]
name = "tap-mssql"
version = "3.0.0"
description = "`tap-mssql` is a Singer tap for Microsoft SQL Server, built with the Meltano Singer SDK."
authors = ["Nekt Team and Contributors"]
maintainers = ["Nekt Team and Contributors"]
license = "GNU Affero"
readme = "README.md"
homepage = "https://nekt.com"
repository = "https://github.com/nektcom/nekt-core"
keywords = ["MSSQL", "SQL Server", "Singer", "ELT", "Meltano", "Meltano SDK"]
classifiers = ["Development Status :: 5 - Production/Stable", "Topic :: Database"]
packages = [
    { include = "tap_mssql" }
]

[tool.poetry.scripts]
tap-mssql = 'tap_mssql.tap:TapMSSQL.cli'

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
sqlalchemy = "^2.0.36"
sshtunnel = "^0.4.0"
paramiko = "^3.5.0"
nekt-singer-sdk = {git = "https://github.com/nektcom/singer-sdk.git", rev = "v0.3.0"}
pymssql = "^2.3.8"

[tool.poetry.dev-dependencies]
docker = "^7.1.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
mypy = "^1.13.0"
pytest-mock = "^3.14.0"
pytest-sugar = "^1.0.0"
pytest-datafiles = "^3.0"
tox-docker = "5.0.0"
pre-commit = "^3.5.0"
bumpversion = "^0.6.0"
requests = "2.32.3"
tox = "^4.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
