[project]
name = "tap-mssql"
version = "3.0.0"
description = "`tap-mssql` is a Singer tap for Microsoft SQL Server, built with the Meltano Singer SDK."
authors = [{name = "Nekt Team and Contributors"}]
maintainers = [{name = "Nekt Team and Contributors"}]
license = {text = "GNU Affero"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
keywords = ["MSSQL", "SQL Server", "Singer", "ELT", "Meltano", "Meltano SDK"]
classifiers = ["Development Status :: 5 - Production/Stable", "Topic :: Database"]
dependencies = [
    "sqlalchemy>=2.0.36,<3",
    "sshtunnel>=0.4.0,<0.5",
    "paramiko>=3.5.0,<4",
    "nekt-singer-sdk @ git+https://github.com/nektcom/singer-sdk.git@v0.3.5",
    "pymssql>=2.3.8,<3",
]

[project.scripts]
tap-mssql = "tap_mssql.tap:TapMSSQL.cli"

[project.urls]
Homepage = "https://nekt.com"
Repository = "https://github.com/nektcom/nekt-core"

[dependency-groups]
dev = [
    "docker>=7.1.0,<8",
    "pytest>=8.3.2,<9",
    "pytest-cov>=5.0.0,<6",
    "mypy>=1.13.0,<2",
    "pytest-mock>=3.14.0,<4",
    "pytest-sugar>=1.0.0,<2",
    "pytest-datafiles>=3.0,<4",
    "tox-docker==5.0.0",
    "pre-commit>=3.5.0,<4",
    "bumpversion>=0.6.0,<0.7",
    "requests==2.32.3",
    "tox>=4.18.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tap_mssql"]

[tool.hatch.metadata]
allow-direct-references = true
